--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TE21 centrerad laýout</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<nav>
+<nav class="container">
 <a href="/" class="logo">
     Logo
 </a>
@@ -17,13 +18,13 @@
     <li><a href="#">Kontakt</a></li>
 </ul>
 </nav>
-<main>
+<main class="container">
     <article>
-        <header>
-            <img src="https://picsum.photos/1280/720" alt="">
-            <h1>Forsta rubr</h1>
+        <header class="hero">
+            <img src="/images/visa trädet.jpg" alt="" width="1280px" height="720px">
+            <h1>Om du är över 25 och har en dator måste du testa detta spel!</h1>
         </header>
-        <h2>underrubr</h2>
+        <h2>Zaza🍃</h2>
         <p>Fun fact among us got banned at the daycare where I work at
 
             Turns out, you know how youtube has the autoplay thing ? Well one day the kids were watching among us songs on YT when autoplay changed it to the among us twerking video, 10 hour version to be exact, and ALL the kids tried twerking
@@ -41,7 +42,7 @@
             So thats how among us got banned</p>
     </article>
 </main>
-<footer>
+<footer class="container">
 <p>jag har en katt. &copy;</p>
 </footer>
 </body>
